# paper-extract

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  SKILL_MAINTENANCE.md  TODO.md  architecture_improvements.html  pyproject.toml
.github/workflows/: ci.yml
docs/: extract-handoff.md
llmclient/: README.md  __init__.py  pyproject.toml
llmclient/llmclient/: __init__.py  config.py  errors.py
llmclient/llmclient/providers/: base.py  claude.py  gemini.py  openai_compat.py
paper_extract/: __init__.py  article.py  assemble.py  cli.py  links.py  paths.py  schema.py  status.py  time.py
paper_extract/collection/: __init__.py  ids.py  importer.py  store.py
paper_extract/export/: __init__.py  bib.py  common.py  csv_export.py  jsonl.py  ris.py
paper_extract/fetch/: __init__.py  artifacts.py  links.py  quality.py  runner.py
paper_extract/search/: __init__.py  planner.py  runner.py  sources.py
paper_extract/sources/: __init__.py
paper_extract/sources/fulltext/: __init__.py  fulltext_fetcher.py  fulltext_sources.py  library_download.py
paper_extract/sources/search/: __init__.py  _shared.py  arxiv_fetcher.py  cancer_tagger.py  compare_sources.py  dedup_merge.py  europepmc_fetcher.py  openalex_fetcher.py  pubmed_fetcher.py
skill/paper-extract/: SKILL.md
skill/paper-extract/agents/: openai.yaml
skill/paper-extract/references/: library-access.md
tests/: README.md  run_all.sh  smoke_step1.py  smoke_step2.py  smoke_step3.py  smoke_step4.py  smoke_step5.py  test_article.py  test_arxiv.py  test_arxiv_fulltext.py  test_assemble.py  test_export.py  test_fulltext_client.py  test_import_pdf.py  test_library.py  test_links.py  test_openalex.py  test_planner.py  test_quality.py  test_search.py  test_units.py
tests/fixtures/: arxiv_query.xml  openalex_works.json
