[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-extract"
version = "0.1.0"
description = "Build auditable local collections of biomedical papers — search, full-text (open + institutional), and citation export."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "paper-extract contributors" }]
keywords = ["bibliometrics", "pubmed", "europepmc", "fulltext", "literature", "biomedical", "ezproxy", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Text Processing",
]
# requests is imported on the core CLI path (library_download); keep it in core.
dependencies = ["requests"]

[project.optional-dependencies]
pdf = ["pymupdf", "pytesseract", "pillow", "docling"]
browser = ["cloakbrowser", "browser_cookie3"]
llm = ["google-genai", "openai", "anthropic"]
dev = ["pytest", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/hfl112/paper-extract"
Repository = "https://github.com/hfl112/paper-extract"
Issues = "https://github.com/hfl112/paper-extract/issues"

[project.scripts]
paper-extract = "paper_extract.cli:main"

[tool.setuptools.packages.find]
include = ["paper_extract*", "llmclient*"]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["llmclient"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
# Keep all pyflakes (F: unused/undefined names) + import-sorting (I). Ignore the
# stylistic pycodestyle rules the codebase uses on purpose: compact `a; b`
# retry loops (E702), long lines (E501), local mid-file imports (E402),
# short names like `l`/`_re` (E741), and a couple of lambdas (E731).
ignore = ["E402", "E501", "E702", "E731", "E741"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# Type-check only the files below; use their imports for types but don't report
# errors inside those dependencies (vendored llmclient, not-yet-typed modules).
follow_imports = "silent"
# Scoped to the well-typed modules for now; widen as types land elsewhere.
files = [
    "paper_extract/article.py",
    "paper_extract/assemble.py",
    "paper_extract/search/sources.py",
    "paper_extract/export/common.py",
    "paper_extract/links.py",
    "paper_extract/paths.py",
    "paper_extract/sources/search/_shared.py",
]
